# SkinLearning

./: .gitignore  BatchJob.sh  GCNN.ipynb  Model Selection.ipynb  Model V2.ipynb  Model.ipynb  README.md  Sampling.ipynb  Stats.ipynb  a.txt  filtered.pkl  getMissing.py  newSamples.pkl  notebook.bat  notebook.bat.bak  pyproject.toml  requirements.txt  sampleRanges.pkl  sched.sh  setup.cfg  setup.py  statsRes.pkl  statsRes2.pkl
.ipynb_checkpoints/: GNN 2.0-checkpoint.ipynb  Model Selection-checkpoint.ipynb  Model V2-checkpoint.ipynb  Model-checkpoint.ipynb  RNN outputs-checkpoint.ipynb  Sampling-checkpoint.ipynb  Siamese CNN-checkpoint.ipynb  Testing Wavelets-checkpoint.ipynb
Data/: Sample.py  Sample.py.bak  missingSamples.pkl
MastersDiss.egg-info/: PKG-INFO  SOURCES.txt
Notebooks/: 2D CNN.ipynb  Attention Mechanism.ipynb  Autoencoder.ipynb  CNN Temporal Hidden Size.ipynb  Demo.ipynb  Filtering V2.ipynb  GCNN.ipynb  GNN 2.0.ipynb  GRU Comparison.ipynb  Improvements.ipynb  K-fold cross validation.ipynb  KFCV Results.ipynb  LSTM Comparison.ipynb  MI.ipynb  Model Selection-orig.ipynb  Model Selection.ipynb  Model V2.ipynb  Model.ipynb  New Representation.ipynb  Parameters.ipynb  RNN Comparison.ipynb  RNN outputs - 1 FC.ipynb  RNN outputs.ipynb  RNN-Copy1.ipynb  RNN.ipynb  Sampling.ipynb  Siamese CNN.ipynb  Stats.ipynb  Testing Wavelets.ipynb  WPD Eval.ipynb  WPD Levels.ipynb  Wavelet Decomposition.ipynb  net  res.pkl
Sampling/: QMCSobolSequence.py  Sample.py  Stats.py  a.txt.pkl  samples.pkl
SkinLearning.egg-info/: PKG-INFO  SOURCES.txt
Utils/: BatchFix.sh  test.py  (+10 more)
(+39 files in other folders)
